cleanup decoding