@@ -41,11 +41,9 @@ package org.fabric3.binding.ws.metro.generator.java;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
-import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -406,12 +404,9 @@ public class JavaGeneratorDelegate implements MetroGeneratorDelegate<JavaService
         URI targetUri = definition.getTargetUri();
         if (targetUri != null) {
             try {
-                // TODO get rid of need to decode
-                URL url = new URL(URLDecoder.decode(targetUri.toASCIIString(), "UTF-8"));
+                URL url = targetUri.toURL();
                 endpointDefinition = synthesizer.synthesizeReferenceEndpoint(contract, serviceClass, url);
             } catch (MalformedURLException e) {
-                throw new GenerationException(e);
-            } catch (UnsupportedEncodingException e) {
                 throw new GenerationException(e);
             }
         } else {
